--- a/cryptodashboardFrontend/package.json
+++ b/cryptodashboardFrontend/package.json
@@ -8,7 +8,6 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
-    
   },
   "private": true,
   "dependencies": {
@@ -25,6 +24,8 @@
     "@loopback/authentication": "^8.0.0",
     "@loopback/authentication-jwt": "^0.10.0",
     "angular-plotly.js": "^4.0.4",
+    "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "plotly.js-dist": "^2.6.4",
     "plotly.js-dist-min": "^2.6.4",
     "rxjs": "^7.4.0",
