--- a/cryptodashboardFrontend/package.json
+++ b/cryptodashboardFrontend/package.json
@@ -23,9 +23,12 @@
     "@angular/router": "~13.0.0",
     "@loopback/authentication": "^8.0.0",
     "@loopback/authentication-jwt": "^0.10.0",
+    "@types/lodash.groupby": "^4.6.6",
     "angular-plotly.js": "^4.0.4",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "plotly.js-dist": "^2.6.4",
     "plotly.js-dist-min": "^2.6.4",
     "rxjs": "^7.4.0",
@@ -43,7 +46,8 @@
     "@angular/cli": "~13.0.1",
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^12.20.37",
     "@types/plotly.js-dist-min": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
